--- a/src/chrome/locale/sl-SL/screengrab.properties
+++ b/src/chrome/locale/sl-SL/screengrab.properties
@@ -1,4 +1,4 @@
-extensions.screengrab.description=Zajame posnetek zaslona z uporabo Jave.
+extensions.screengrab.description=Shrani spletno stran kot sliko ali je prenese v odložišče
 SaveAsMessage=Shrani zajem zaslona kot ...
 TryAgainMessage=Zajem zaslona ni uspel.\n\nNi znano, kaj se je v resnici zgodilo. Gre za neznano napako. Lahko poskusite znova? Ali pa znova za\u017Eenete Firefox? :)\n
 OutOfMemoryMessage=Zajem zaslona ni uspel.\n\nJava je vrnila izjemo OutOfMemoryException. Najverjetneje je zmanjkalo spomina, saj ste poskusili zajeti razmeroma veliko stran. Vendar je ta stran preobse\u017Ena za va\u0161e nastavitve. \u010Ce uspete nastaviti ve\u010D spomina za JVM, potem bo najverjetneje delovalo.\n\nMorda morate zdaj ponovno zagnati Firefox, lahko pa poskusite tudi brez tega.\n
